--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -69,6 +69,10 @@
   border: transparent;
   width: 16px;
   height: 16px;
+  &._active{
+    background-color: #7e6c51;
+    display: inline-block;
+  }
   &:hover {
     background-color: $color-gold-header;
   }
@@ -76,12 +80,6 @@
     width: 7px;
     height: 7px;
   }
-}
-
-
-.slider-button.active {
-  background-color: #7e6c51;
-  display: inline-block;
 }
 
 
@@ -106,10 +104,9 @@
   width: 100%;
   height: 100%;
   display: none;
-}
-
-.welcome-slider-img.active {
-  display: block;
+  &._active{
+    display: block;
+  }
 }
 
 .slider-pic {
